fixing style issue on mobile:   - frontpage/footer   - session/3dot icon

--- a/src/public/styles/base.less
+++ b/src/public/styles/base.less
@@ -15,6 +15,7 @@ ul{
 
 .page-wrapper{
     min-height: 100%;
+    position: relative;
 }
 
 .nav-wrapper .session{
@@ -30,7 +31,7 @@ ul{
 
 .page-footer{
     position: absolute;
-    bottom: 0;
+    bottom: -20px;
     left: 0;
     right: 0;
 }
@@ -48,6 +49,13 @@ ul.select-dropdown{
 .nav-wrapper{
   z-index: 1000;
   position: relative;
+
+  .right-menu{
+    i{
+        vertical-align: middle;
+        display: inline-block;
+    }
+  }
 }
 
 .user-count-view{
